templates/@theme-base/_styles.scss
// Styles defined by Protonmail see https://design-system-beta.netlify.com/sass-variables/ ->

@import "../@theme-base/reusable-components/design-system-config";

$main-bg-color: $base;
$secondary-bg-color: darken($base, 5%);
$bgcolor-searchbox-field: $search;
$bgcolor-spacebar: rgba(255, 255, 255, 0.1);
$bgcolor-aside-link: rgba(0, 0, 0, 0.3);
$bgcolor-toolbar: lighten($base, 5%);
$fillcolor-logo: $pm-global-light;
$fillcolor-icons: $white;
$color-nav-link: $navigation;
$color-nav-active: $highlight;
$color-standard-text: $white;
$boxshadow-main: none; 

@import "../@theme-base/pm-styles/pm-theme-config";

// Theme template styles ->

// Compose button
.pm-button--error, .pm-button--primary, .pm-button--warning, .pm-button-blue {
  color: #fff;
  background-color: $highlight;
  border: 1px solid $highlight;
  transition: color .2s ease-in-out, background-color .2s ease-in-out, border-color .2s ease-in-out;
}

.is-hover.pm-button--error, .is-hover.pm-button--primary, .is-hover.pm-button--warning, .pm-button--error:focus, .pm-button--error:focus-within, .pm-button--error:hover, .pm-button--primary:focus, .pm-button--primary:focus-within, .pm-button--primary:hover, .pm-button--warning:focus, .pm-button--warning:focus-within, .pm-button--warning:hover, .pm-button-blue.is-hover, .pm-button-blue:focus, .pm-button-blue:focus-within, .pm-button-blue:hover {
  color: $navigation;
  box-shadow: 0 0 .35714em 0 rgba(0,0,0,.2);
  background: darken($highlight, 5%);
  border: 1px solid darken($highlight, 5%);
}

// Aside links (other products)
.aside-link {
  background: $secondary-bg-color;
}

.aside-link:active .aside-linkIcon, .aside-link:focus .aside-linkIcon, .aside-link:hover .aside-linkIcon, .aside-link[aria-current="true"] .aside-linkIcon {
  fill: $secondary-bg-color;
  background: none;
}

// Storage indicator

.circle-chart__circle {
  stroke: $highlight;
}

// Top navigation
#global_search.searchbox-field[type="search"] {
  background-color: $search;
  color: $text_color;
}

.topnav-link, .topnav-link > .topnav-icon {
  color: $navigation;
  transition: color .2s ease-in-out;
}

.topnav-link:active, .topnav-link:focus, 
.topnav-link:hover, .topnav-link[aria-current="true"] {
  color: $highlight;
}

.topnav-link:active > .topnav-icon, .topnav-link:focus > .topnav-icon, 
.topnav-link:hover > .topnav-icon, .topnav-link[aria-current=true] > .topnav-icon {
  color: $highlight;
}

// Conversation items
.conversation {
  &.marked::before {
    background: $highlight;
  }

  &.item-container {
    &:not(.item-is-selected):not(.item-contact):not(.read):not(.active) {
      
    }
  }

  &.item-container.active, &.item-is-selected {
    background: rgba($highlight, 0.1);
  }



  .item-checkbox:checked + .item-icon {
    background-color: $highlight;
    border-color: $highlight;
  }

  .item-checkbox + .item-icon:hover .item-icon-fakecheck-icon {
    fill: $highlight;
  }

  .item-checkbox:checked + .item-icon:hover .item-icon-fakecheck-icon {
    fill: $navigation;
  }

  .selectBoxElement-container:hover .item-icon {
    // background-color: transparent;
    border: 1px solid darken($highlight, 5%);

    .item-icon-fakecheck-icon {
      fill: darken($highlight, 5%);
    }
  }
}

// Star icon
.starbutton {
  fill: $highlight !important;
  opacity: 0.7;
}

.starbutton:focus, .starbutton:hover {
  fill: $highlight;
}

// Highlighted text (seen when multiple messages are selected)
.color-pm-blue {
  color: $highlight;
}

// Radio buttons
.pm-radio:checked + .pm-radio-fakeradio::before {
  background: $highlight;
}

// Information blocks
.block-info-standard {
  border-color: $info_color;
}

.block-info-standard-warning {
  border-color: $warning_color;
}

.block-info-standard-error {
  border-color: $danger_color;
}

// Links across the site:
.link, a, .pm-button--link {
  color: $base;
  transition: color .2s ease-in-out;
}

.link:active, .link:focus, .link:hover, 
a:active, a:focus, a:hover,
.pm-button--link:hover {
  color: darken($highlight, 10%);
}

// Buttons
.pm-button {
  &--primary {
    background-color: $highlight;
    border-color: $highlight;
  }
}

.pm-button--error, .pm-button--error.pm-button--info, .pm-button--error.pm-button--redborder, .pm-button--primary, .pm-button--primary.pm-button--info, .pm-button--primary.pm-button--redborder, .pm-button--warning, .pm-button--warning.pm-button--info, .pm-button--warning.pm-button--redborder, .pm-button-blue, .pm-button-blue.pm-button--info, .pm-button-blue.pm-button--redborder, .pm-button.pm-button--error, .pm-button.pm-button--primary, .pm-button.pm-button--warning, .pm-button.pm-button-blue {
  background-color: $highlight;
  border-color: $highlight;
}

.is-hover.pm-button--error, .is-hover.pm-button--error.pm-button--info, .is-hover.pm-button--error.pm-button--redborder, .is-hover.pm-button--primary, .is-hover.pm-button--primary.pm-button--info, .is-hover.pm-button--primary.pm-button--redborder, .is-hover.pm-button--warning, .is-hover.pm-button--warning.pm-button--info, .is-hover.pm-button--warning.pm-button--redborder, .pm-button--error.pm-button--info:focus, .pm-button--error.pm-button--info:focus-within, .pm-button--error.pm-button--info:hover, .pm-button--error.pm-button--redborder:focus, .pm-button--error.pm-button--redborder:focus-within, .pm-button--error.pm-button--redborder:hover, .pm-button--error:focus, .pm-button--error:focus-within, .pm-button--error:hover, .pm-button--primary.pm-button--info:focus, .pm-button--primary.pm-button--info:focus-within, .pm-button--primary.pm-button--info:hover, .pm-button--primary.pm-button--redborder:focus, .pm-button--primary.pm-button--redborder:focus-within, .pm-button--primary.pm-button--redborder:hover, .pm-button--primary:focus, .pm-button--primary:focus-within, .pm-button--primary:hover, .pm-button--warning.pm-button--info:focus, .pm-button--warning.pm-button--info:focus-within, .pm-button--warning.pm-button--info:hover, .pm-button--warning.pm-button--redborder:focus, .pm-button--warning.pm-button--redborder:focus-within, .pm-button--warning.pm-button--redborder:hover, .pm-button--warning:focus, .pm-button--warning:focus-within, .pm-button--warning:hover, .pm-button-blue.is-hover, .pm-button-blue.is-hover.pm-button--info, .pm-button-blue.is-hover.pm-button--redborder, .pm-button-blue.pm-button--info:focus, .pm-button-blue.pm-button--info:focus-within, .pm-button-blue.pm-button--info:hover, .pm-button-blue.pm-button--redborder:focus, .pm-button-blue.pm-button--redborder:focus-within, .pm-button-blue.pm-button--redborder:hover, .pm-button-blue:focus, .pm-button-blue:focus-within, .pm-button-blue:hover, .pm-button.is-hover.pm-button--error, .pm-button.is-hover.pm-button--primary, .pm-button.is-hover.pm-button--warning, .pm-button.pm-button--error:focus, .pm-button.pm-button--error:focus-within, .pm-button.pm-button--error:hover, .pm-button.pm-button--primary:focus, .pm-button.pm-button--primary:focus-within, .pm-button.pm-button--primary:hover, .pm-button.pm-button--warning:focus, .pm-button.pm-button--warning:focus-within, .pm-button.pm-button--warning:hover, .pm-button.pm-button-blue.is-hover, .pm-button.pm-button-blue:focus, .pm-button.pm-button-blue:focus-within, .pm-button.pm-button-blue:hover {
  background: darken($highlight, 5%);
  border: 1px solid darken($highlight, 5%);
}

// Settings toggle button
.pm-toggle-checkbox:checked+.pm-toggle-label:before {
  background: $highlight;
  border-color: $highlight;
}

// Message panel

// Attachment icon
.fill-pm-blue,
.message-attachmentIcon .file-outer-icon.is-embedded {
  fill: $highlight;
}

// Subscription plans
.pm-table--highlight[data-plan-number="1"] tr th:nth-child(2) {
  border-color: $highlight;
  color: $highlight;

  &::before {
    background-color: $highlight;
  }
}

.pm-table--highlight[data-plan-number="1"] tr td:nth-child(2), 
.pm-table--highlight[data-plan-number="1"] tr th:nth-child(2),
.pm-table--highlight[data-plan-number="1"] tr:last-child td:nth-child(2) {
  border-color: $highlight;
}

// Contacts
.progress-contact {
  color: $highlight;

  &::-moz-progress-bar {
    background: $highlight;
  }
}

